feat(shares)!: limit shares by number of opens
